--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
         <p class="blog__text">LETEST NEWS</p>
         <h2 class="blog__title" style="text-align: center">From Our Blog</h2>
 
-        <div class="row">
+        <div class="row blog__row">
           <div class="blog__column">
             <div class="blog__divDecor">
               <img
@@ -501,12 +501,12 @@
           <div class="modal-content">
             <div class="mySlides">
               <div class="numbertext">1 / 2</div>
-              <img src="images/design-trends.png" style="width: 100%" />
+              <img class="modal__img" src="images/design-trends.png"  />
             </div>
 
             <div class="mySlides">
               <div class="numbertext">2 / 2</div>
-              <img src="images/28-interior-designs.png" style="width: 100%" />
+              <img class="modal__img" src="images/28-interior-designs.png"/>
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
