--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
     <!-- Experience Section  -->
     <section class="experience">
       <div class="experience__container container">
-        <div class="experience__text">
+        <div class="experience__flex"> 
+          <div class="experience__text">
           <img src="images/20image.png" alt="20" />
           <p class="experience__description">
             Years of Successful Working The&nbspMarket
@@ -218,7 +219,9 @@
             src="images/shelves.png"
             alt="shelves design"
           />
-        </div>
+        </div> </div>
+       
+        <button class="experience__btnMobile" type="button">Read more</button>
       </div>
     </section>
     <!-- counter Section  -->
@@ -273,16 +276,16 @@
         <h2 class="slider__title">Client says about us</h2>
         <div class="slider__wrapper">
           <div class="slider__btnWrapper">
-            <a class="swiper__link" href="#">
-              <div class="swiper__btn-next">
-                <span class="swiper__span"><</span>
-              </div>
-            </a>
-            <a class="swiper__link" href="#">
-              <div class="swiper__btn-prev">
-                <span class="swiper__span">></span>
-              </div>
-            </a>
+              <a class="swiper__link" href="#">
+                <div class="swiper__btn-next">
+                  <span class="swiper__span"><</span>
+                </div>
+              </a>
+              <a class="swiper__link" href="#">
+                <div class="swiper__btn-prev">
+                  <span class="swiper__span">></span>
+                </div>
+              </a>
           </div>
           <div class="swiper mySwiper container">
             <div class="swiper-wrapper">
@@ -595,7 +598,7 @@
     <!-- Footer Section  -->
 
     <footer class="footer">
-      <div class="container">
+      <!-- <div class="container"> -->
         <div class="footer__container equal-columns">
           <div class="footer__logoWrapper">
             <a class="footer__logo" href="#">
@@ -725,7 +728,7 @@
         <p class="footer__copyrightText">
           Copyright @ 2020 Brandoxide.all right reserved.
         </p>
-      </div>
+      <!-- </div> -->
     </footer>
 
     <script src="js/progressbar.js"></script>
